# DocumentSearch-MCP

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
