[project]
name = "doc-search-mcp"
version = "1.0.0"
description = "MCP server for searching documentation of programming languages, game engines, frameworks, and tools."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "duckduckgo_search>=7.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
